update icu .git-subdir config for latest version

--- a/icu/.git-subdir/config
+++ b/icu/.git-subdir/config
@@ -1,7 +1,7 @@
-[subdir "upstream"]
-	url = https://github.com/rig-project/icu
-	branch = rig
 [subdir "integration"]
 	ref = ee660811460046cab06099406225cdb8343c7cc7
+	url = https://github.com/rig-project/icu
+	branch = rig
 [subdir]
 	commit-uuid = 40ff55e7-29b4-4fd6-a549-f5b65c997378
+	version = 1
