libpng: set integration.branch = rig

--- a/libpng/.git-subdir/config
+++ b/libpng/.git-subdir/config
@@ -1,7 +1,7 @@
 [subdir "integration"]
 	ref = 408dbac80177bb471000a447dadb5c3d76a2bf6c
 	url = https://github.com/rig-project/libpng
-	branch = libpng16
+	branch = rig
 [subdir]
 	version = 1
 	commit-uuid = 1bfd2b84-b111-4606-86b4-718fd1e6b684
