--- a/nsgif/.git-subdir/config
+++ b/nsgif/.git-subdir/config
@@ -1,6 +1,6 @@
 [subdir "integration"]
 	url = git@github.com:rig-project/libnsgif.git
-	branch = master
+	branch = rig
 	ref = 88992e3058095f683c8c29036013474b0352f8fc
 [subdir]
 	commit-uuid = d5ad58f1-73a5-42f9-b506-dc1571a781c1
