fontconfig: set integration.branch = rig

--- a/fontconfig/.git-subdir/config
+++ b/fontconfig/.git-subdir/config
@@ -1,7 +1,7 @@
 [subdir "integration"]
 	ref = 67fe06be883e0ff23d0ce867dc36d505fc84989e
 	url = https://github.com/rig-project/fontconfig
-	branch = emscripten
+	branch = rig
 [subdir]
 	version = 1
 	commit-uuid = 4afc770e-b8cc-49f9-92d9-c9bad3425dba
