cglib: set upstream.url
new value:

  git@github.com:rig-project/cglib.git

--- a/cglib/.git-subdir/config
+++ b/cglib/.git-subdir/config
@@ -5,3 +5,5 @@
 [subdir]
 	version = 1
 	commit-uuid = eb59e400-d6b7-4506-b018-df4f5183e0d9
+[subdir "upstream"]
+	url = git@github.com:rig-project/cglib.git
