--- a/wslay/.git-subdir/config
+++ b/wslay/.git-subdir/config
@@ -1,7 +1,7 @@
 [subdir "integration"]
 	ref = 36af86773c533e6826bedddd2b9ca0175e971b8b
 	url = git@github.com:rig-project/wslay.git
-	branch = rig-subdir
+	branch = rig
 [subdir]
 	version = 1
 	commit-uuid = 6e2b791d-5705-4e19-9e7b-a5ac7ecd2e66
