freetype: set upstream.url
new value:

  git://git.sv.gnu.org/freetype/freetype2.git

--- a/freetype/.git-subdir/config
+++ b/freetype/.git-subdir/config
@@ -5,3 +5,5 @@
 [subdir]
 	version = 1
 	commit-uuid = 665dc4b9-0c5f-4367-a33c-c97b72973d0d
+[subdir "upstream"]
+	url = git://git.sv.gnu.org/freetype/freetype2.git
