protobuf-c: set upstream.url
new value:

  https://github.com/protobuf-c/protobuf-c

--- a/protobuf-c/.git-subdir/config
+++ b/protobuf-c/.git-subdir/config
@@ -5,3 +5,5 @@
 [subdir]
 	version = 1
 	commit-uuid = 4183b673-e758-4b6c-9786-4d6167419947
+[subdir "upstream"]
+	url = https://github.com/protobuf-c/protobuf-c
