fontconfig: set upstream.url
new value:

  git://anongit.freedesktop.org/fontconfig

--- a/fontconfig/.git-subdir/config
+++ b/fontconfig/.git-subdir/config
@@ -5,3 +5,5 @@
 [subdir]
 	version = 1
 	commit-uuid = 4afc770e-b8cc-49f9-92d9-c9bad3425dba
+[subdir "upstream"]
+	url = git://anongit.freedesktop.org/fontconfig
